--- a/notebooks/Basic_Classification_Examples.ipynb
+++ b/notebooks/Basic_Classification_Examples.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "326748ef-630d-42ce-9815-1e08035d82fd",
    "metadata": {},
@@ -19,25 +20,30 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "be91302b-3d48-449a-9eeb-4444d86d8e7c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:27.973819Z",
+     "iopub.status.busy": "2024-01-10T21:40:27.973274Z",
+     "iopub.status.idle": "2024-01-10T21:40:29.516886Z",
+     "shell.execute_reply": "2024-01-10T21:40:29.516285Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOA jar path location (config.ini): ./jar/moa.jar\n",
+      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
+      "MOA jar path location (config.ini): jar/moa.jar\n",
       "JVM Location (system): \n",
-      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
+      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
       "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
    ],
    "source": [
-    "from prepare_jpype import start_jpype\n",
-    "start_jpype()\n",
-    "\n",
-    "from evaluation import test_then_train_evaluation\n",
+    "from capymoa.evaluation import test_then_train_evaluation\n",
     "from benchmarking import test_then_train_RIVER"
    ]
   },
@@ -45,16 +51,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "60bb1d0d-66e3-45f1-b7cc-15ae08cbe81a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:29.519367Z",
+     "iopub.status.busy": "2024-01-10T21:40:29.519037Z",
+     "iopub.status.idle": "2024-01-10T21:40:29.522312Z",
+     "shell.execute_reply": "2024-01-10T21:40:29.521415Z"
+    }
+   },
    "outputs": [],
    "source": [
     "## Datasets paths\n",
-    "csv_elec_tiny_path = './data/electricity_tiny.csv'\n",
+    "csv_elec_tiny_path = '../data/electricity_tiny.csv'\n",
     "\n",
     "# csv_elec_tiny_path = './data/electricity_tiny_nominal_class.csv'"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c7835c1a-35d0-42bb-9a4d-d990773cc0f6",
    "metadata": {},
@@ -66,7 +80,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "3d366b78-feeb-497a-8a05-578437600343",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:29.526308Z",
+     "iopub.status.busy": "2024-01-10T21:40:29.526087Z",
+     "iopub.status.idle": "2024-01-10T21:40:29.535209Z",
+     "shell.execute_reply": "2024-01-10T21:40:29.534686Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -78,13 +99,20 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "d56e186b-a288-4953-9d95-74f25cfeff5e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:29.537276Z",
+     "iopub.status.busy": "2024-01-10T21:40:29.537112Z",
+     "iopub.status.idle": "2024-01-10T21:40:30.211130Z",
+     "shell.execute_reply": "2024-01-10T21:40:30.210497Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARFClassifier, 0.8630, 0.2438, 0.2520\n"
+      "ARFClassifier, 0.8900, 0.6701, 0.6694\n"
      ]
     }
    ],
@@ -104,13 +132,20 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "0d9c9d33-52b2-4442-a577-396de0bf31e7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:30.213544Z",
+     "iopub.status.busy": "2024-01-10T21:40:30.213294Z",
+     "iopub.status.idle": "2024-01-10T21:40:30.294977Z",
+     "shell.execute_reply": "2024-01-10T21:40:30.294507Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HoeffdingTreeClassifier, 0.8230, 0.0285, 0.0293\n"
+      "HoeffdingTreeClassifier, 0.8230, 0.0781, 0.0781\n"
      ]
     }
    ],
@@ -127,13 +162,20 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "84f29ddd-2e97-4c31-945a-1129e8ca1833",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:30.297314Z",
+     "iopub.status.busy": "2024-01-10T21:40:30.297033Z",
+     "iopub.status.idle": "2024-01-10T21:40:33.157500Z",
+     "shell.execute_reply": "2024-01-10T21:40:33.157005Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNNClassifier, 0.7560, 1.6352, 1.6364\n"
+      "KNNClassifier, 0.7560, 2.8551, 2.8530\n"
      ]
     }
    ],
@@ -150,13 +192,20 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "47e22fbe-c42a-4cf0-9f40-0c408fc8185b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:33.159483Z",
+     "iopub.status.busy": "2024-01-10T21:40:33.159332Z",
+     "iopub.status.idle": "2024-01-10T21:40:33.223952Z",
+     "shell.execute_reply": "2024-01-10T21:40:33.223421Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GaussianNB, 0.8490, 0.0245, 0.0277\n"
+      "GaussianNB, 0.8490, 0.0612, 0.0613\n"
      ]
     }
    ],
@@ -173,13 +222,20 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "7f59847d-b33b-431e-8ddb-ee0a3a5375b7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:33.226057Z",
+     "iopub.status.busy": "2024-01-10T21:40:33.225906Z",
+     "iopub.status.idle": "2024-01-10T21:40:34.927724Z",
+     "shell.execute_reply": "2024-01-10T21:40:34.927240Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SRPClassifier(HoeffdingTreeClassifier), 0.8910, 0.5973, 0.5978\n"
+      "SRPClassifier(HoeffdingTreeClassifier), 0.8950, 1.6984, 1.6968\n"
      ]
     }
    ],
@@ -199,13 +255,20 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "e25a96f4-7612-445b-b210-838d474fba2d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:34.929718Z",
+     "iopub.status.busy": "2024-01-10T21:40:34.929571Z",
+     "iopub.status.idle": "2024-01-10T21:40:35.349525Z",
+     "shell.execute_reply": "2024-01-10T21:40:35.349008Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ExtremelyFastDecisionTreeClassifier, 0.8230, 0.1673, 0.1681\n"
+      "ExtremelyFastDecisionTreeClassifier, 0.8230, 0.4167, 0.4165\n"
      ]
     }
    ],
@@ -219,6 +282,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "15079978-5afa-4876-a0cc-ab0fcf3ab6ce",
    "metadata": {},
@@ -230,11 +294,18 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "af49a45b-767d-4532-bf39-f408d2ab515a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:35.351385Z",
+     "iopub.status.busy": "2024-01-10T21:40:35.351245Z",
+     "iopub.status.idle": "2024-01-10T21:40:35.387709Z",
+     "shell.execute_reply": "2024-01-10T21:40:35.387207Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# from moa.streams import ArffFileStream\n",
-    "from stream import stream_from_file\n",
+    "from capymoa.stream.stream import stream_from_file\n",
     "# from evaluation import test_then_train_evaluation\n",
     "\n",
     "elec_stream = stream_from_file(path_to_csv_or_arff=csv_elec_tiny_path, class_index=-1)"
@@ -244,7 +315,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "8b4a0ea7-8707-4bf3-8ce6-1f3a965497c0",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:35.390530Z",
+     "iopub.status.busy": "2024-01-10T21:40:35.390367Z",
+     "iopub.status.idle": "2024-01-10T21:40:35.394976Z",
+     "shell.execute_reply": "2024-01-10T21:40:35.394633Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -265,18 +343,25 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "9cf0778d-942f-44e2-bd79-e754e6c7735e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:35.396898Z",
+     "iopub.status.busy": "2024-01-10T21:40:35.396753Z",
+     "iopub.status.idle": "2024-01-10T21:40:35.978028Z",
+     "shell.execute_reply": "2024-01-10T21:40:35.977132Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AdaptiveRandomForest wallclock: 0.43860316276550293 cpu_time: 1.4520670000000013 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 89.45, 'Kappa Statistic (percent)': 78.10294728102947, 'Kappa Temporal Statistic (percent)': 24.9110320284697, 'Kappa M Statistic (percent)': 73.2233502538071}\n"
+      "AdaptiveRandomForest wallclock: 0.5703258514404297 cpu_time: 2.069129 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 89.45, 'Kappa Statistic (percent)': 78.10294728102947, 'Kappa Temporal Statistic (percent)': 24.9110320284697, 'Kappa M Statistic (percent)': 73.2233502538071}\n"
      ]
     }
    ],
    "source": [
-    "from classifiers import AdaptiveRandomForest\n",
+    "from capymoa.learner.classifier import AdaptiveRandomForest\n",
     "\n",
     "arf10 = AdaptiveRandomForest(schema=elec_stream.get_schema(), ensemble_size=5)\n",
     "results = test_then_train_evaluation(stream=elec_stream, learner=arf10)\n",
@@ -288,19 +373,26 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "1270cf7b-3bf1-4092-9498-f5e6f91aea64",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:35.981432Z",
+     "iopub.status.busy": "2024-01-10T21:40:35.981207Z",
+     "iopub.status.idle": "2024-01-10T21:40:36.043602Z",
+     "shell.execute_reply": "2024-01-10T21:40:36.042767Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HoeffdingTree wallclock: 0.04164600372314453 cpu_time: 0.16458300000000037 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.65, 'Kappa Statistic (percent)': 64.11315010011087, 'Kappa Temporal Statistic (percent)': -23.487544483985793, 'Kappa M Statistic (percent)': 55.964467005076145}\n"
+      "HoeffdingTree wallclock: 0.05756115913391113 cpu_time: 0.22951699999999775 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.65, 'Kappa Statistic (percent)': 64.11315010011087, 'Kappa Temporal Statistic (percent)': -23.487544483985793, 'Kappa M Statistic (percent)': 55.964467005076145}\n"
      ]
     }
    ],
    "source": [
     "from moa.classifiers.trees import HoeffdingTree\n",
-    "from learners import MOAClassifier\n",
+    "from capymoa.learner import MOAClassifier\n",
     "\n",
     "ht_moa = MOAClassifier(moa_learner=HoeffdingTree())\n",
     "\n",
@@ -312,13 +404,20 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "c8ac0b21-a3bf-488b-b5cb-ce6289298ee1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:36.046641Z",
+     "iopub.status.busy": "2024-01-10T21:40:36.046252Z",
+     "iopub.status.idle": "2024-01-10T21:40:36.289414Z",
+     "shell.execute_reply": "2024-01-10T21:40:36.287786Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN wallclock: 0.13543391227722168 cpu_time: 0.3617920000000012 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 80.55, 'Kappa Statistic (percent)': 59.525712097754244, 'Kappa Temporal Statistic (percent)': -38.43416370106766, 'Kappa M Statistic (percent)': 50.63451776649747}\n"
+      "kNN wallclock: 0.2357478141784668 cpu_time: 0.9588379999999983 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 80.55, 'Kappa Statistic (percent)': 59.525712097754244, 'Kappa Temporal Statistic (percent)': -38.43416370106766, 'Kappa M Statistic (percent)': 50.63451776649747}\n"
      ]
     }
    ],
@@ -335,13 +434,20 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "15ccd3c4-f0d6-479d-b773-df230cfdf2aa",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:36.292455Z",
+     "iopub.status.busy": "2024-01-10T21:40:36.292171Z",
+     "iopub.status.idle": "2024-01-10T21:40:36.352539Z",
+     "shell.execute_reply": "2024-01-10T21:40:36.351936Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EFDT wallclock: 0.041168212890625 cpu_time: 0.09535999999999945 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.69999999999999, 'Kappa Statistic (percent)': 64.22426628726465, 'Kappa Temporal Statistic (percent)': -23.131672597864835, 'Kappa M Statistic (percent)': 56.09137055837563}\n"
+      "EFDT wallclock: 0.055425405502319336 cpu_time: 0.23116999999999877 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.69999999999999, 'Kappa Statistic (percent)': 64.22426628726465, 'Kappa Temporal Statistic (percent)': -23.131672597864835, 'Kappa M Statistic (percent)': 56.09137055837563}\n"
      ]
     }
    ],
@@ -358,13 +464,20 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "e264098a-588a-456b-ae11-dced5b5ceb7f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:36.354934Z",
+     "iopub.status.busy": "2024-01-10T21:40:36.354687Z",
+     "iopub.status.idle": "2024-01-10T21:40:36.402357Z",
+     "shell.execute_reply": "2024-01-10T21:40:36.401810Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NaiveBayes wallclock: 0.03550219535827637 cpu_time: 0.07216899999999882 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 84.0, 'Kappa Statistic (percent)': 66.56748353448563, 'Kappa Temporal Statistic (percent)': -13.879003558718917, 'Kappa M Statistic (percent)': 59.39086294416243}\n"
+      "NaiveBayes wallclock: 0.041938066482543945 cpu_time: 0.16296099999999925 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 84.0, 'Kappa Statistic (percent)': 66.56748353448563, 'Kappa Temporal Statistic (percent)': -13.879003558718917, 'Kappa M Statistic (percent)': 59.39086294416243}\n"
      ]
     }
    ],
@@ -381,13 +494,20 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "6fa952e8-08e3-4e6f-88ad-dac1aaea94ef",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:36.404894Z",
+     "iopub.status.busy": "2024-01-10T21:40:36.404673Z",
+     "iopub.status.idle": "2024-01-10T21:40:36.975354Z",
+     "shell.execute_reply": "2024-01-10T21:40:36.974695Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "StreamingRandomPatches wallclock: 0.26701807975769043 cpu_time: 0.7757100000000001 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 88.75, 'Kappa Statistic (percent)': 76.35402128768642, 'Kappa Temporal Statistic (percent)': 19.928825622775744, 'Kappa M Statistic (percent)': 71.4467005076142}\n"
+      "StreamingRandomPatches wallclock: 0.565244197845459 cpu_time: 1.9068369999999994 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 88.75, 'Kappa Statistic (percent)': 76.35402128768642, 'Kappa Temporal Statistic (percent)': 19.928825622775744, 'Kappa M Statistic (percent)': 71.4467005076142}\n"
      ]
     }
    ],
@@ -399,14 +519,6 @@
     "results = test_then_train_evaluation(stream=elec_stream, learner=SRP_moa)\n",
     "print(f\"{SRP_moa} wallclock: {results['wallclock']} cpu_time: {results['cpu_time']} metrics: {results['cumulative']}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0398af58-2267-4a10-8a75-d2ed3d99099f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -425,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
