--- a/notebooks/Classification_Evaluator_Examples.ipynb
+++ b/notebooks/Classification_Evaluator_Examples.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4b40b5a3-2217-4ef4-9daa-8c33a82a8f31",
    "metadata": {},
@@ -16,30 +17,36 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "f6c3fc32-efa6-4238-a6f6-7e84aed4973d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:39.276232Z",
+     "iopub.status.busy": "2024-01-10T21:40:39.276066Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.069967Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.069451Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOA jar path location (config.ini): ./jar/moa.jar\n",
+      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
+      "MOA jar path location (config.ini): jar/moa.jar\n",
       "JVM Location (system): \n",
-      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
+      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
       "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
    ],
    "source": [
-    "from prepare_jpype import start_jpype\n",
-    "import pandas as pd\n",
-    "start_jpype()\n",
-    "\n",
-    "from stream import Schema\n",
-    "from evaluation import ClassificationEvaluator, ClassificationWindowedEvaluator"
+    "from capymoa.stream.stream import Schema\n",
+    "from capymoa.evaluation import ClassificationEvaluator, ClassificationWindowedEvaluator\n",
+    "import pandas as pd"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9995e6df-d96b-4f80-b0a4-54d1385915c6",
    "metadata": {},
@@ -53,7 +60,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "195b466e-c3c5-4288-81db-4fd562798011",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.072495Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.072170Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.076336Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.075828Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -71,6 +85,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0cb6d91c-4e27-4b17-a279-82094cd4b9ea",
    "metadata": {},
@@ -84,7 +99,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "29b0a5d9-1f26-4dbe-bb39-158d9521e90c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.078266Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.078123Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.086811Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.086415Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -117,6 +139,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2ae2fb05-f065-4c83-8ef9-89fd7d8eb523",
    "metadata": {},
@@ -130,7 +153,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "dd73c09c-0e2f-4adc-90bf-25c85adc5305",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.088957Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.088803Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.095096Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.094673Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -157,6 +187,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7fc9a892-3673-4019-8f46-309ff3431b20",
    "metadata": {},
@@ -170,7 +201,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "64458fd0-1f88-48c2-a532-b19b48ce9472",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.097498Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.097310Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.102017Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.101611Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -195,6 +233,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "86c54288-07c8-44cf-bed2-72f03e2442b3",
    "metadata": {},
@@ -210,7 +249,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "6ea3c19f-4ef8-4289-9af0-9949936c1f77",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.104104Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.103902Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.109018Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.108531Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -236,6 +282,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eb15f752-7b9f-473b-85bd-7570bbd35069",
    "metadata": {},
@@ -249,7 +296,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "dcd3a902-6271-463d-a4fc-04f04bb1a723",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.111296Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.111113Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.115992Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.115551Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -275,6 +329,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f5930a45-a4f1-486a-b21d-1916418b8237",
    "metadata": {},
@@ -288,7 +343,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "b3741d4b-46fb-44f8-9adc-4c4734f0733d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.117920Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.117627Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.121797Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.121287Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -314,6 +376,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "46c9f6c9-6aa4-4346-b351-75ca401cfd89",
    "metadata": {},
@@ -329,7 +392,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "c24c1547-371a-47d3-adbd-f873bd4e461e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.123812Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.123673Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.128156Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.127815Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -357,6 +427,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cfef740d-0bf6-4af1-9e4b-59b02b773b28",
    "metadata": {},
@@ -369,7 +440,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "6f940410-8866-448c-825c-5e06ba61ed54",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.130062Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.129924Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.136003Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.135404Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -395,6 +473,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "065b390f-fc1a-464b-8416-45a5be600528",
    "metadata": {},
@@ -407,14 +486,21 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "0b1b7972-5175-40a3-97bc-edd29aeabe8d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.138406Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.138125Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.144318Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.143916Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "['classified instances', 'classifications correct (percent)', 'Kappa Statistic (percent)', 'Kappa Temporal Statistic (percent)', 'Kappa M Statistic (percent)', 'Recall for class 0 (percent)', 'Recall for class 1 (percent)', 'Recall for class 2 (percent)']\n",
-      "[10.0, 10.0, -36.36363636363637, -80.0, -50.000000000000014, 0.0, 25.0, 0.0]\n",
+      "[10.0, 10.0, -28.57142857142858, -80.0, -50.000000000000014, 0.0, 25.0, 0.0]\n",
       "10.0\n"
      ]
     }
@@ -440,6 +526,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7ef8d1fb-1be8-49da-a80f-765d4785320a",
    "metadata": {},
@@ -453,7 +540,14 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "a1a3f50c-fa77-4bdc-8105-597512670034",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.146409Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.146060Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.158633Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.158174Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -580,6 +674,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7ec076e8-7e7d-4029-b983-ed5ee0de35a6",
    "metadata": {},
@@ -594,7 +689,14 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "73b739b9-60dc-4975-afb9-5d74e8abad99",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.160505Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.160370Z",
+     "iopub.status.idle": "2024-01-10T21:40:40.169773Z",
+     "shell.execute_reply": "2024-01-10T21:40:40.169321Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -699,6 +801,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5fe53bb2-d894-456c-9977-d7f59f467f4b",
    "metadata": {},
@@ -707,6 +810,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "97fc6d27-2424-4966-893a-54727f569eba",
    "metadata": {},
@@ -721,7 +825,14 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "eb7c4331-b390-423d-b645-3cbae4752950",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:40.171641Z",
+     "iopub.status.busy": "2024-01-10T21:40:40.171508Z",
+     "iopub.status.idle": "2024-01-10T21:40:41.795294Z",
+     "shell.execute_reply": "2024-01-10T21:40:41.794769Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -985,6 +1096,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c81beca9-5fd8-4c0a-b22c-85d4c0b05d1b",
    "metadata": {},
@@ -996,7 +1108,14 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "9f202299-317d-45db-a62d-747769a958a8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:41.797275Z",
+     "iopub.status.busy": "2024-01-10T21:40:41.797125Z",
+     "iopub.status.idle": "2024-01-10T21:40:42.914467Z",
+     "shell.execute_reply": "2024-01-10T21:40:42.913667Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1058,6 +1177,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7a4b8e3e-1ef2-4b7c-ab1f-8372cfa54d5e",
    "metadata": {},
@@ -1070,7 +1190,14 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "e2e98a8c-acff-480c-9c1d-f21262bc5cfa",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:42.917161Z",
+     "iopub.status.busy": "2024-01-10T21:40:42.916686Z",
+     "iopub.status.idle": "2024-01-10T21:40:44.768614Z",
+     "shell.execute_reply": "2024-01-10T21:40:44.768106Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1102,7 +1229,7 @@
     "\n",
     "maxInstances=1000\n",
     "sampleFrequency=1000\n",
-    "rtg_2abrupt_path = './data/RTG_2abrupt.csv'\n",
+    "rtg_2abrupt_path = '../data/RTG_2abrupt.csv'\n",
     "dataset = pd.read_csv(rtg_2abrupt_path).to_numpy()\n",
     "\n",
     "model = ARFClassifier(\n",
@@ -1154,14 +1281,6 @@
     "print(f\"{model}, accuracy.get(): {accuracy.get():.6f}, evaluator.accuracy(): {evaluator.accuracy():.4f}\")\n",
     "cm"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "900a1df6-ce92-4082-a3b5-35804257d023",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1180,7 +1299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
