--- a/notebooks/Creating_new_classifier.ipynb
+++ b/notebooks/Creating_new_classifier.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b773bf8e-c420-44e1-80a6-99f75dd12268",
    "metadata": {},
@@ -14,30 +15,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b02aaf7b-11b5-4512-8a3b-5c26d8235b3a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MOA jar path location (config.ini): ./jar/moa.jar\n",
-      "JVM Location (system): \n",
-      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n"
-     ]
-    }
-   ],
-   "source": [
-    "from prepare_jpype import start_jpype\n",
-    "\n",
-    "start_jpype()"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "076b1b20-bb48-43f0-b3ac-38e984ff2745",
    "metadata": {},
@@ -47,9 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fac5566f-a280-41b2-912d-005673ad429e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:47.008059Z",
+     "iopub.status.busy": "2024-01-10T21:40:47.007847Z",
+     "iopub.status.idle": "2024-01-10T21:40:47.014591Z",
+     "shell.execute_reply": "2024-01-10T21:40:47.014159Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -74,6 +59,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "96cb3df1-190c-49ea-959b-292559df13e6",
    "metadata": {},
@@ -91,12 +77,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3b7be7ed-97d2-437a-9ed9-fb71e4f33328",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:47.016542Z",
+     "iopub.status.busy": "2024-01-10T21:40:47.016410Z",
+     "iopub.status.idle": "2024-01-10T21:40:47.504266Z",
+     "shell.execute_reply": "2024-01-10T21:40:47.503586Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
+      "MOA jar path location (config.ini): jar/moa.jar\n",
+      "JVM Location (system): \n",
+      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
+      "Sucessfully started the JVM and added MOA jar to the class path\n"
+     ]
+    }
+   ],
    "source": [
-    "from learners import Classifier, MOAClassifier\n",
+    "from capymoa.learner.learners import Classifier, MOAClassifier\n",
     "from moa.classifiers.trees import HoeffdingTree\n",
     "from collections import Counter\n",
     "import numpy as np\n",
@@ -147,6 +153,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a4ff1ac9-07a1-4a0b-9bb5-f2afa79dd928",
    "metadata": {},
@@ -156,27 +163,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "da2bba35-c258-4fc0-8932-f97d56e4e276",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:47.507883Z",
+     "iopub.status.busy": "2024-01-10T21:40:47.507412Z",
+     "iopub.status.idle": "2024-01-10T21:40:52.552975Z",
+     "shell.execute_reply": "2024-01-10T21:40:52.552498Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "82.6513947740113"
+       "82.11731991525424"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from evaluation import prequential_evaluation\n",
-    "from stream import stream_from_file\n",
+    "from capymoa.evaluation import prequential_evaluation\n",
+    "from capymoa.stream.stream import stream_from_file\n",
     "from moa.classifiers.trees import HoeffdingAdaptiveTree\n",
     "\n",
-    "DATA_PATH = \"./data/\"\n",
+    "DATA_PATH = \"../data/\"\n",
     "\n",
     "## Opening a file as a stream\n",
     "elec_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"electricity.csv\")\n",
@@ -190,6 +204,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c99c28f5-0eb7-49f1-b38b-7e6891d5f30a",
    "metadata": {},
@@ -199,28 +214,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3da81297-af63-4d30-a643-81f347304efa",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:52.554845Z",
+     "iopub.status.busy": "2024-01-10T21:40:52.554638Z",
+     "iopub.status.idle": "2024-01-10T21:40:56.273639Z",
+     "shell.execute_reply": "2024-01-10T21:40:56.273034Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NEW OB acc: 81.86131709039547\n",
-      "CPU times: user 4.26 s, sys: 54.8 ms, total: 4.32 s\n",
-      "Wall time: 4.12 s\n"
+      "NEW OB acc: 82.56091101694916\n",
+      "CPU times: user 3.86 s, sys: 24 ms, total: 3.89 s\n",
+      "Wall time: 3.71 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "\n",
-    "from stream import stream_from_file\n",
-    "from evaluation import ClassificationEvaluator\n",
+    "from capymoa.stream.stream import stream_from_file\n",
+    "from capymoa.evaluation import ClassificationEvaluator\n",
     "from moa.classifiers.trees import HoeffdingTree, HoeffdingAdaptiveTree\n",
     "\n",
-    "DATA_PATH = \"./data/\"\n",
+    "DATA_PATH = \"../data/\"\n",
     "\n",
     "## Opening a file as a stream\n",
     "elec_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"electricity.csv\")\n",
@@ -262,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
