--- a/notebooks/DEMO.ipynb
+++ b/notebooks/DEMO.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b773bf8e-c420-44e1-80a6-99f75dd12268",
    "metadata": {},
@@ -13,6 +14,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "deff0053-1130-43f1-bf69-02bd34bc8e03",
    "metadata": {},
@@ -24,31 +26,46 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "b02aaf7b-11b5-4512-8a3b-5c26d8235b3a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:30.677082Z",
+     "iopub.status.busy": "2024-01-10T21:41:30.676404Z",
+     "iopub.status.idle": "2024-01-10T21:41:31.321496Z",
+     "shell.execute_reply": "2024-01-10T21:41:31.320782Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOA jar path location (config.ini): ./jar/moa.jar\n",
+      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
+      "MOA jar path location (config.ini): jar/moa.jar\n",
       "JVM Location (system): \n",
-      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
+      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
       "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
    ],
    "source": [
-    "from stream import stream_from_file\n",
+    "from capymoa.stream.stream import stream_from_file\n",
     "\n",
-    "DATA_PATH = \"./data/\""
+    "DATA_PATH = \"../data/\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "id": "79a66284-4998-4423-bdde-d5229b56061d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:31.324811Z",
+     "iopub.status.busy": "2024-01-10T21:41:31.324591Z",
+     "iopub.status.idle": "2024-01-10T21:41:33.487280Z",
+     "shell.execute_reply": "2024-01-10T21:41:33.486802Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -63,8 +80,8 @@
    ],
    "source": [
     "## Test-then-train loop\n",
-    "from evaluation import ClassificationEvaluator\n",
-    "from classifiers import OnlineBagging\n",
+    "from capymoa.evaluation import ClassificationEvaluator\n",
+    "from capymoa.learner.classifier.classifiers import OnlineBagging\n",
     "\n",
     "## Opening a file as a stream\n",
     "elec_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"electricity.csv\")\n",
@@ -89,7 +106,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "9a382df9-5790-4414-a088-9ebfe50a6446",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:33.489103Z",
+     "iopub.status.busy": "2024-01-10T21:41:33.488925Z",
+     "iopub.status.idle": "2024-01-10T21:41:35.096806Z",
+     "shell.execute_reply": "2024-01-10T21:41:35.096385Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -266,7 +290,7 @@
    ],
    "source": [
     "## Test-then-train and windowed evaluation wrapped in prequential evaluation\n",
-    "from evaluation import prequential_evaluation\n",
+    "from capymoa.evaluation import prequential_evaluation\n",
     "\n",
     "ob_learner = OnlineBagging(schema=elec_stream.get_schema(), ensemble_size=5)\n",
     "\n",
@@ -280,16 +304,23 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "63a4f3fc-bc48-4849-9040-682672a2a46e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:35.098591Z",
+     "iopub.status.busy": "2024-01-10T21:41:35.098411Z",
+     "iopub.status.idle": "2024-01-10T21:41:35.101312Z",
+     "shell.execute_reply": "2024-01-10T21:41:35.101003Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'learner': 'OnlineBagging',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x1041ad190>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x123f87ed0>,\n",
-       " 'wallclock': 1.646461009979248,\n",
-       " 'cpu_time': 1.9042149999999998}"
+       " 'cumulative': <capymoa.evaluation.evaluation.ClassificationEvaluator at 0x7f368440d340>,\n",
+       " 'windowed': <capymoa.evaluation.evaluation.ClassificationWindowedEvaluator at 0x7f3684412550>,\n",
+       " 'wallclock': 1.5939953327178955,\n",
+       " 'cpu_time': 1.9296059999999997}"
       ]
      },
      "execution_count": 4,
@@ -306,7 +337,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "c6c1e7f8-2e6a-4ad9-9ace-ce73ff6224d2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:35.102888Z",
+     "iopub.status.busy": "2024-01-10T21:41:35.102765Z",
+     "iopub.status.idle": "2024-01-10T21:41:36.676483Z",
+     "shell.execute_reply": "2024-01-10T21:41:36.676132Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -483,7 +521,7 @@
    ],
    "source": [
     "# What if we want to use any MOA Learner? \n",
-    "from learners import MOAClassifier\n",
+    "from capymoa.learner.learners import MOAClassifier\n",
     "from moa.classifiers.trees import HoeffdingAdaptiveTree\n",
     "\n",
     "# Restart the stream\n",
@@ -503,6 +541,12 @@
    "execution_count": 6,
    "id": "b170a6fc-d7be-455e-91f5-183255643807",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:36.678199Z",
+     "iopub.status.busy": "2024-01-10T21:41:36.678067Z",
+     "iopub.status.idle": "2024-01-10T21:41:36.680673Z",
+     "shell.execute_reply": "2024-01-10T21:41:36.680227Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -551,7 +595,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "ac835936-fc44-4f7b-acae-fe629b8a4ec6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:36.682363Z",
+     "iopub.status.busy": "2024-01-10T21:41:36.682231Z",
+     "iopub.status.idle": "2024-01-10T21:41:37.162495Z",
+     "shell.execute_reply": "2024-01-10T21:41:37.161813Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -566,7 +617,7 @@
    ],
    "source": [
     "## What about comparing the results of both algorithms in a plot? \n",
-    "from visualization import plot_windowed_results\n",
+    "from capymoa.evaluation.visualization import plot_windowed_results\n",
     "\n",
     "plot_windowed_results(results_OB, results_HAT)"
    ]
@@ -575,7 +626,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "61e684d8-2992-4ca9-bada-4660ff5fd9b4",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:37.164559Z",
+     "iopub.status.busy": "2024-01-10T21:41:37.164363Z",
+     "iopub.status.idle": "2024-01-10T21:41:50.445999Z",
+     "shell.execute_reply": "2024-01-10T21:41:50.445390Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from moa.classifiers.meta import StreamingRandomPatches\n",
@@ -591,7 +649,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "b2cca100-0a41-4abd-a700-f4c640871be7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:50.447937Z",
+     "iopub.status.busy": "2024-01-10T21:41:50.447806Z",
+     "iopub.status.idle": "2024-01-10T21:41:50.450377Z",
+     "shell.execute_reply": "2024-01-10T21:41:50.450049Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -631,7 +696,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "1d23ca82-4967-4a99-90c8-34841cf58f66",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:50.451931Z",
+     "iopub.status.busy": "2024-01-10T21:41:50.451806Z",
+     "iopub.status.idle": "2024-01-10T21:41:50.672790Z",
+     "shell.execute_reply": "2024-01-10T21:41:50.672229Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -649,6 +721,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0af53c62-ce89-49eb-a7cb-6c9c09f4e6f9",
    "metadata": {},
@@ -660,7 +733,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "56ed36b6-fd9a-49b6-965e-2ff964423948",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:50.674660Z",
+     "iopub.status.busy": "2024-01-10T21:41:50.674524Z",
+     "iopub.status.idle": "2024-01-10T21:41:57.447390Z",
+     "shell.execute_reply": "2024-01-10T21:41:57.446940Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1247,8 +1327,8 @@
     "## Open a regression dataset\n",
     "from moa.classifiers.trees import FIMTDD\n",
     "from moa.classifiers.meta import AdaptiveRandomForestRegressor\n",
-    "from learners import MOARegressor\n",
-    "from regressors import KNNRegressor\n",
+    "from capymoa.learner.learners import MOARegressor\n",
+    "from capymoa.learner.regressor.regressors import KNNRegressor\n",
     "\n",
     "\n",
     "fried_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"fried.arff\")\n",
@@ -1267,6 +1347,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f41e74a0-715e-47ea-8ff6-f45beb8a1ce6",
    "metadata": {},
@@ -1278,7 +1359,14 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "700d864e-f2d4-4e56-9e0d-d39c5f05e936",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:57.449208Z",
+     "iopub.status.busy": "2024-01-10T21:41:57.449065Z",
+     "iopub.status.idle": "2024-01-10T21:41:57.710125Z",
+     "shell.execute_reply": "2024-01-10T21:41:57.709704Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1296,6 +1384,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "071f25af-0673-4377-8912-0f0f5f43380c",
    "metadata": {},
@@ -1307,7 +1396,14 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "f7b59e4a-7651-4cff-82c0-bb587917e234",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:57.711934Z",
+     "iopub.status.busy": "2024-01-10T21:41:57.711801Z",
+     "iopub.status.idle": "2024-01-10T21:42:01.094272Z",
+     "shell.execute_reply": "2024-01-10T21:42:01.093775Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1322,7 +1418,7 @@
    ],
    "source": [
     "from moa.classifiers.trees import HoeffdingAdaptiveTree\n",
-    "from learners import MOAClassifier\n",
+    "from capymoa.learner.learners import MOAClassifier\n",
     "\n",
     "hat = MOAClassifier(moa_learner=HoeffdingAdaptiveTree())\n",
     "\n",
@@ -1335,6 +1431,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2dddf15c-7677-4c3f-8b8f-b1821bf2f019",
    "metadata": {},
@@ -1350,7 +1447,14 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "5f3964f3-74bd-499b-b470-732b7d29c05c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:42:01.096321Z",
+     "iopub.status.busy": "2024-01-10T21:42:01.096129Z",
+     "iopub.status.idle": "2024-01-10T21:42:01.615272Z",
+     "shell.execute_reply": "2024-01-10T21:42:01.614844Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1364,7 +1468,7 @@
     }
    ],
    "source": [
-    "from stream import Stream\n",
+    "from capymoa.stream.stream import Stream\n",
     "from moa.classifiers.trees import HoeffdingAdaptiveTree, HoeffdingTree\n",
     "from moa.classifiers.bayes import NaiveBayes\n",
     "from moa.streams import ConceptDriftStream\n",
@@ -1393,7 +1497,14 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "b66d1529-6a11-4e6a-9da2-85833eccac4b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:42:01.617095Z",
+     "iopub.status.busy": "2024-01-10T21:42:01.616954Z",
+     "iopub.status.idle": "2024-01-10T21:42:01.626266Z",
+     "shell.execute_reply": "2024-01-10T21:42:01.625812Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1594,7 +1705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
