--- a/notebooks/Data_Reading.ipynb
+++ b/notebooks/Data_Reading.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "45aaa02b-49f6-44e0-8583-e6757f2aa7be",
    "metadata": {},
@@ -22,6 +23,12 @@
    "execution_count": 1,
    "id": "f6c3fc32-efa6-4238-a6f6-7e84aed4973d",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:58.387608Z",
+     "iopub.status.busy": "2024-01-10T21:40:58.386983Z",
+     "iopub.status.idle": "2024-01-10T21:40:59.122115Z",
+     "shell.execute_reply": "2024-01-10T21:40:59.121502Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -29,29 +36,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOA jar path location (config.ini): ./jar/moa.jar\n",
+      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
+      "MOA jar path location (config.ini): jar/moa.jar\n",
       "JVM Location (system): \n",
-      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
+      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
       "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
    ],
    "source": [
-    "from prepare_jpype import start_jpype\n",
     "import pandas as pd\n",
-    "start_jpype()\n",
-    "\n",
     "# local code imports\n",
-    "from evaluation import *\n",
-    "from classifiers import OnlineBagging\n",
-    "from stream import *\n",
+    "from capymoa.evaluation import windowed_evaluation\n",
+    "from capymoa.learner.classifier import OnlineBagging\n",
+    "from capymoa.stream.stream import *\n",
     "\n",
-    "arff_elec_path = './data/electricity.arff'\n",
-    "csv_elec_path = './data/electricity.csv'"
+    "arff_elec_path = '../data/electricity.arff'\n",
+    "csv_elec_path = '../data/electricity.csv'"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "badf2f49-75c8-4944-bbdf-94a613fb1694",
    "metadata": {},
@@ -61,6 +67,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "09e988f3-c486-4b98-9c39-4be7f55bf86a",
    "metadata": {},
@@ -72,7 +79,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "22525924-b607-4a45-8483-050a211fb6ad",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:40:59.124467Z",
+     "iopub.status.busy": "2024-01-10T21:40:59.124254Z",
+     "iopub.status.idle": "2024-01-10T21:41:01.188291Z",
+     "shell.execute_reply": "2024-01-10T21:41:01.187753Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -244,8 +258,8 @@
      "output_type": "stream",
      "text": [
       "[45312.0, 81.97777777777779, 63.596765274097066, -17.706821480406372, 63.203266787658805]\n",
-      "CPU times: user 3.1 s, sys: 73.5 ms, total: 3.17 s\n",
-      "Wall time: 1.96 s\n"
+      "CPU times: user 4.11 s, sys: 47.1 ms, total: 4.16 s\n",
+      "Wall time: 2.06 s\n"
      ]
     }
    ],
@@ -261,6 +275,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c128a1f-0cbe-4d7d-af5c-f455a3d47f89",
    "metadata": {},
@@ -272,7 +287,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "92e7073d-9fa8-4fe8-8a4d-78583170b6e0",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:01.190116Z",
+     "iopub.status.busy": "2024-01-10T21:41:01.189985Z",
+     "iopub.status.idle": "2024-01-10T21:41:01.546203Z",
+     "shell.execute_reply": "2024-01-10T21:41:01.545655Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -444,8 +466,8 @@
      "output_type": "stream",
      "text": [
       "[45312.0, 81.97777777777779, 63.596765274097066, -17.706821480406372, 63.203266787658805]\n",
-      "CPU times: user 836 ms, sys: 28.7 ms, total: 864 ms\n",
-      "Wall time: 485 ms\n"
+      "CPU times: user 945 ms, sys: 25.7 ms, total: 970 ms\n",
+      "Wall time: 353 ms\n"
      ]
     }
    ],
@@ -461,6 +483,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "de6fe7aa-1833-4cf5-9993-59812c16f329",
    "metadata": {},
@@ -474,7 +497,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "00b77830-c8f9-4bae-8d7e-bf064900b806",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:01.547993Z",
+     "iopub.status.busy": "2024-01-10T21:41:01.547863Z",
+     "iopub.status.idle": "2024-01-10T21:41:01.728842Z",
+     "shell.execute_reply": "2024-01-10T21:41:01.728406Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -585,6 +615,8 @@
     }
    ],
    "source": [
+    "from capymoa.evaluation import ClassificationEvaluator, ClassificationWindowedEvaluator\n",
+    "\n",
     "maxInstancesToProcess = 5000\n",
     "sampleFrequency = 1000\n",
     "instancesProcessed = 1\n",
@@ -610,6 +642,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eb0a07c4-d5ac-42fd-a23b-ea7703a64cd3",
    "metadata": {},
@@ -625,7 +658,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "8fa8c3a2-86b5-4976-a6ff-e67b37510209",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:01.730689Z",
+     "iopub.status.busy": "2024-01-10T21:41:01.730552Z",
+     "iopub.status.idle": "2024-01-10T21:41:01.956386Z",
+     "shell.execute_reply": "2024-01-10T21:41:01.955838Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -651,7 +691,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "310ccc63-c65a-4b35-a9d6-a71030945b3d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:01.958276Z",
+     "iopub.status.busy": "2024-01-10T21:41:01.958079Z",
+     "iopub.status.idle": "2024-01-10T21:41:01.978770Z",
+     "shell.execute_reply": "2024-01-10T21:41:01.978324Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1133,6 +1180,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b8094d84-19bd-41c9-bb0c-065f226ce517",
    "metadata": {},
@@ -1146,7 +1194,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "a417e999-c5c0-4004-99bb-da44ddfd6f6a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:01.980888Z",
+     "iopub.status.busy": "2024-01-10T21:41:01.980750Z",
+     "iopub.status.idle": "2024-01-10T21:41:02.598365Z",
+     "shell.execute_reply": "2024-01-10T21:41:02.597896Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1193,6 +1248,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "45ceb663-d1bd-43f7-80ec-d5d58290f570",
    "metadata": {},
@@ -1201,6 +1257,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "05565742-b975-4aa1-8404-9bc122666d0d",
    "metadata": {},
@@ -1212,19 +1269,26 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "4f679ac9-b80c-4691-85ec-a73a079506ea",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:02.600283Z",
+     "iopub.status.busy": "2024-01-10T21:41:02.600148Z",
+     "iopub.status.idle": "2024-01-10T21:41:03.376883Z",
+     "shell.execute_reply": "2024-01-10T21:41:03.376418Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<stream.Instance object at 0x2aeeb0e90>\n",
-      "<stream.Instance object at 0x2aeeb1090>\n",
-      "<stream.Instance object at 0x2aeeb0dd0>\n",
+      "<capymoa.stream.stream.Instance object at 0x7f75573a12b0>\n",
+      "<capymoa.stream.stream.Instance object at 0x7f75573a1910>\n",
+      "<capymoa.stream.stream.Instance object at 0x7f75573a12b0>\n",
       "restarting stream...\n",
-      "<stream.Instance object at 0x10ff492d0>\n",
-      "<stream.Instance object at 0x10ff492d0>\n",
-      "<stream.Instance object at 0x10ff492d0>\n",
+      "<capymoa.stream.stream.Instance object at 0x7f75573a1910>\n",
+      "<capymoa.stream.stream.Instance object at 0x7f75573a12b0>\n",
+      "<capymoa.stream.stream.Instance object at 0x7f75573a1910>\n",
       "Not a moa_stream, a numpy read file\n",
       "Read 45312 instances, total = 45312\n"
      ]
@@ -1274,6 +1338,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "341d6aa1-cea4-40e8-a140-802c1161e119",
    "metadata": {},
@@ -1287,7 +1352,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "d5f7e413-00ae-4ced-9792-2a4d37a99d6f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:03.378766Z",
+     "iopub.status.busy": "2024-01-10T21:41:03.378584Z",
+     "iopub.status.idle": "2024-01-10T21:41:05.082396Z",
+     "shell.execute_reply": "2024-01-10T21:41:05.081956Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1462,6 +1534,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "04a4d229-1568-4c71-9a55-e5a423a76a2f",
    "metadata": {},
@@ -1473,13 +1546,20 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "283e00c0-53f5-435b-b97f-1bed8da0e61b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:05.084597Z",
+     "iopub.status.busy": "2024-01-10T21:41:05.084418Z",
+     "iopub.status.idle": "2024-01-10T21:41:05.088830Z",
+     "shell.execute_reply": "2024-01-10T21:41:05.088290Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<stream.Instance object at 0x13fbf12d0>\n"
+      "<capymoa.stream.stream.Instance object at 0x7f75573bfb20>\n"
      ]
     },
     {
@@ -1505,13 +1585,20 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "380f3ab4-49fd-4653-8ffa-d20948348f81",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:05.090806Z",
+     "iopub.status.busy": "2024-01-10T21:41:05.090619Z",
+     "iopub.status.idle": "2024-01-10T21:41:05.685637Z",
+     "shell.execute_reply": "2024-01-10T21:41:05.685137Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<stream.Instance object at 0x107aad590>\n",
+      "<capymoa.stream.stream.Instance object at 0x7f762c6d37f0>\n",
       "Not a moa_stream, a numpy read file\n"
      ]
     }
@@ -1530,6 +1617,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "13d7847b-727a-4504-901b-d3cc04df41d5",
    "metadata": {},
@@ -1543,14 +1631,21 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "2e85947b-d712-4da7-b65f-7786a1ad1ee8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:05.687513Z",
+     "iopub.status.busy": "2024-01-10T21:41:05.687380Z",
+     "iopub.status.idle": "2024-01-10T21:41:17.055155Z",
+     "shell.execute_reply": "2024-01-10T21:41:17.054632Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 21.4 s, sys: 99.6 ms, total: 21.5 s\n",
-      "Wall time: 20.9 s\n"
+      "CPU times: user 12.1 s, sys: 37.6 ms, total: 12.2 s\n",
+      "Wall time: 11.4 s\n"
      ]
     }
    ],
@@ -1574,14 +1669,21 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "ae79c509-e1b6-4f2b-9a10-371a45634296",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:41:17.057019Z",
+     "iopub.status.busy": "2024-01-10T21:41:17.056870Z",
+     "iopub.status.idle": "2024-01-10T21:41:28.578868Z",
+     "shell.execute_reply": "2024-01-10T21:41:28.578402Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 21.8 s, sys: 76.5 ms, total: 21.8 s\n",
-      "Wall time: 21.4 s\n"
+      "CPU times: user 11.9 s, sys: 39.8 ms, total: 11.9 s\n",
+      "Wall time: 11.5 s\n"
      ]
     }
    ],
@@ -1626,7 +1728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
