--- a/notebooks/MOALearners_API_Examples.ipynb
+++ b/notebooks/MOALearners_API_Examples.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e74571ce-e81a-4321-a8f8-c7a9fe7b851a",
    "metadata": {},
@@ -23,24 +24,36 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "f6c3fc32-efa6-4238-a6f6-7e84aed4973d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:59:49.952673Z",
+     "iopub.status.busy": "2024-01-10T21:59:49.952536Z",
+     "iopub.status.idle": "2024-01-10T21:59:50.741322Z",
+     "shell.execute_reply": "2024-01-10T21:59:50.740684Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOA jar path location (config.ini): ./jar/moa.jar\n",
+      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
+      "MOA jar path location (config.ini): jar/moa.jar\n",
       "JVM Location (system): \n",
-      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
+      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
       "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
    ],
    "source": [
-    "from prepare_jpype import start_jpype\n",
     "import pandas as pd\n",
-    "start_jpype()\n",
+    "# CapyMOA code imports\n",
+    "from capymoa.evaluation import *\n",
+    "from capymoa.stream import *\n",
+    "from capymoa.learner.classifier import OnlineBagging, AdaptiveRandomForest\n",
+    "from capymoa.learner.regressor import AdaptiveRandomForestRegressor\n",
+    "from capymoa.learner import MOAClassifier, MOARegressor\n",
     "\n",
     "# MOA imports\n",
     "from moa.core import Example, Utils\n",
@@ -53,19 +66,13 @@
     "# For classification tests\n",
     "from moa.classifiers.trees import HoeffdingAdaptiveTree\n",
     "\n",
-    "# CapyMOA code imports\n",
-    "from evaluation import *\n",
-    "from classifiers import OnlineBagging, AdaptiveRandomForest\n",
-    "from regressors import AdaptiveRandomForestRegressor\n",
-    "from learners import MOAClassifier, MOARegressor\n",
     "\n",
     "\n",
-    "arff_fried_path = './data/fried.arff'\n",
-    "\n",
-    "from stream import *"
+    "arff_fried_path = '../data/fried.arff'\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "86519b73-d560-468d-844f-ae79c6098675",
    "metadata": {},
@@ -77,7 +84,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "626a36be-58e2-41e2-81fe-8f5b31bd375b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:59:50.744190Z",
+     "iopub.status.busy": "2024-01-10T21:59:50.743592Z",
+     "iopub.status.idle": "2024-01-10T21:59:52.278266Z",
+     "shell.execute_reply": "2024-01-10T21:59:52.277782Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -213,6 +227,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5fd3d2b8-776d-43d2-8f7e-9e5f9f9e3cf2",
    "metadata": {},
@@ -222,9 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "00b77830-c8f9-4bae-8d7e-bf064900b806",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:59:52.280156Z",
+     "iopub.status.busy": "2024-01-10T21:59:52.280015Z",
+     "iopub.status.idle": "2024-01-10T21:59:53.570402Z",
+     "shell.execute_reply": "2024-01-10T21:59:53.569869Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -329,7 +351,7 @@
        "4                    54.114713  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,6 +384,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c81beca9-5fd8-4c0a-b22c-85d4c0b05d1b",
    "metadata": {},
@@ -372,9 +395,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9f202299-317d-45db-a62d-747769a958a8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:59:53.573018Z",
+     "iopub.status.busy": "2024-01-10T21:59:53.572745Z",
+     "iopub.status.idle": "2024-01-10T21:59:53.735586Z",
+     "shell.execute_reply": "2024-01-10T21:59:53.735068Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -579,7 +609,7 @@
        "9                     78.787879                     61.538462  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,6 +653,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d9da7c72-1667-4402-8840-61d6a7ccba60",
    "metadata": {},
@@ -637,9 +668,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "00a39c4f-0998-4783-a791-9d76ae75fe59",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:59:53.737933Z",
+     "iopub.status.busy": "2024-01-10T21:59:53.737717Z",
+     "iopub.status.idle": "2024-01-10T21:59:53.820436Z",
+     "shell.execute_reply": "2024-01-10T21:59:53.819946Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -873,13 +911,13 @@
        "9                     66.666667                     53.846154  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from stream import Instance\n",
+    "from capymoa.stream import Instance\n",
     "\n",
     "rtg = MOA_RTG()\n",
     "# Setting parameters using setViaCLIString\n",
@@ -911,6 +949,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7a4b8e3e-1ef2-4b7c-ab1f-8372cfa54d5e",
    "metadata": {},
@@ -920,9 +959,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "817d2b5d-0ae2-4e8f-8cd2-03d3d5291f53",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:59:53.822736Z",
+     "iopub.status.busy": "2024-01-10T21:59:53.822162Z",
+     "iopub.status.idle": "2024-01-10T21:59:53.938407Z",
+     "shell.execute_reply": "2024-01-10T21:59:53.937921Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1127,7 +1173,7 @@
        "9                     78.787879                     61.538462  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,6 +1207,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ea3a0345-6a1b-4b00-b627-316e4498537b",
    "metadata": {},
@@ -1170,9 +1217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "32892084-c0a3-430c-8df2-4d92dee1d544",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:59:53.940560Z",
+     "iopub.status.busy": "2024-01-10T21:59:53.940356Z",
+     "iopub.status.idle": "2024-01-10T21:59:54.029244Z",
+     "shell.execute_reply": "2024-01-10T21:59:54.028606Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1377,7 +1431,7 @@
        "9                     60.606061                     61.538462  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,6 +1468,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "30dedce7-2f03-40a7-af16-652e51d849fa",
    "metadata": {},
@@ -1425,9 +1480,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "1e7a3122-ee31-467a-86b6-4c90e4f82dde",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:59:54.031525Z",
+     "iopub.status.busy": "2024-01-10T21:59:54.031320Z",
+     "iopub.status.idle": "2024-01-10T21:59:54.171683Z",
+     "shell.execute_reply": "2024-01-10T21:59:54.170630Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1632,7 +1694,7 @@
        "9                     78.787879                     61.538462  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1668,6 +1730,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "38770e95-f1ef-4b09-831e-d058e7e49685",
    "metadata": {},
@@ -1676,6 +1739,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "47b4d1ba-92d2-4bcd-885a-023ffa97bd89",
    "metadata": {},
@@ -1685,9 +1749,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "499f5773-e0c0-4eb2-80c8-4fdf727df875",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:59:54.174303Z",
+     "iopub.status.busy": "2024-01-10T21:59:54.174089Z",
+     "iopub.status.idle": "2024-01-10T21:59:55.032031Z",
+     "shell.execute_reply": "2024-01-10T21:59:55.031531Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1784,7 +1855,7 @@
        "3                      0.697030                               0.696947  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1835,6 +1906,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2c023e08-6f66-4d03-9acf-a1656b1b8a4d",
    "metadata": {},
@@ -1844,9 +1916,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "50c485e0-d32c-4665-b544-70f4a942d9ca",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:59:55.033979Z",
+     "iopub.status.busy": "2024-01-10T21:59:55.033840Z",
+     "iopub.status.idle": "2024-01-10T21:59:56.097048Z",
+     "shell.execute_reply": "2024-01-10T21:59:56.096531Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1857,8 +1936,8 @@
     }
    ],
    "source": [
-    "from evaluation import RegressionEvaluator\n",
-    "from stream import ARFFStream\n",
+    "from capymoa.evaluation import RegressionEvaluator\n",
+    "from capymoa.stream import ARFFStream\n",
     "\n",
     "maxInstancesToProcess = 50000\n",
     "sampleFrequency = 10000\n",
@@ -1883,6 +1962,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "63833b71-251b-4afa-b619-b1f967a88dc4",
    "metadata": {},
@@ -1892,9 +1972,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "9bbaa729-58db-4cb2-ade2-daf216c7be7c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:59:56.099214Z",
+     "iopub.status.busy": "2024-01-10T21:59:56.098803Z",
+     "iopub.status.idle": "2024-01-10T21:59:57.349460Z",
+     "shell.execute_reply": "2024-01-10T21:59:57.348723Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2002,13 +2089,13 @@
        "3                      0.826327                               0.826136  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from stream import stream_from_file\n",
+    "from capymoa.stream import stream_from_file\n",
     "\n",
     "maxInstancesToProcess = 50000\n",
     "sampleFrequency = 10000\n",
@@ -2041,6 +2128,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ee35806b-af3e-4d91-a541-a4ff0b910445",
    "metadata": {},
@@ -2050,9 +2138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "12d26af5-ccfe-4274-a4b6-2a6cb3e24878",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T21:59:57.352619Z",
+     "iopub.status.busy": "2024-01-10T21:59:57.352410Z",
+     "iopub.status.idle": "2024-01-10T21:59:59.196446Z",
+     "shell.execute_reply": "2024-01-10T21:59:59.195968Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2160,7 +2255,7 @@
        "3                      0.348467                               0.347749  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2221,7 +2316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
