--- a/notebooks/Preprocessing.ipynb
+++ b/notebooks/Preprocessing.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b773bf8e-c420-44e1-80a6-99f75dd12268",
    "metadata": {},
@@ -19,30 +20,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b02aaf7b-11b5-4512-8a3b-5c26d8235b3a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MOA jar path location (config.ini): ./jar/moa.jar\n",
-      "JVM Location (system): \n",
-      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n"
-     ]
-    }
-   ],
-   "source": [
-    "from prepare_jpype import start_jpype\n",
-    "\n",
-    "start_jpype()"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "96cb3df1-190c-49ea-959b-292559df13e6",
    "metadata": {},
@@ -52,14 +30,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "3b7be7ed-97d2-437a-9ed9-fb71e4f33328",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:00:01.466703Z",
+     "iopub.status.busy": "2024-01-10T22:00:01.466543Z",
+     "iopub.status.idle": "2024-01-10T22:00:02.926942Z",
+     "shell.execute_reply": "2024-01-10T22:00:02.926449Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
+      "MOA jar path location (config.ini): jar/moa.jar\n",
+      "JVM Location (system): \n",
+      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
+      "Sucessfully started the JVM and added MOA jar to the class path\n",
       "x: [0.       0.056443 0.439155 0.003467 0.422915 0.414912], y: 1.0\n",
       "x: [0.021277 0.051699 0.415055 0.003467 0.422915 0.414912], y: 1.0\n",
       "x: [0.042553 0.051489 0.385004 0.003467 0.422915 0.414912], y: 1.0\n",
@@ -84,9 +75,9 @@
     }
    ],
    "source": [
-    "from stream import stream_from_file\n",
+    "from capymoa.stream import stream_from_file\n",
     "\n",
-    "DATA_PATH = \"./data/\"\n",
+    "DATA_PATH = \"../data/\"\n",
     "\n",
     "## Opening a file as a stream\n",
     "elec_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"electricity.csv\")\n",
@@ -102,9 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "38d831be-3560-4efd-89bd-1ec71f001833",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:00:02.928840Z",
+     "iopub.status.busy": "2024-01-10T22:00:02.928678Z",
+     "iopub.status.idle": "2024-01-10T22:00:02.932936Z",
+     "shell.execute_reply": "2024-01-10T22:00:02.932616Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -135,6 +133,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a48e9306-f459-4d8a-8608-9bd71a7600ae",
    "metadata": {},
@@ -144,6 +143,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "55d070de-8697-4f98-a11b-eab4e3d5c281",
    "metadata": {},
@@ -153,9 +153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "14681f54-23a1-4f93-9145-abf484c91c54",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:00:02.934886Z",
+     "iopub.status.busy": "2024-01-10T22:00:02.934616Z",
+     "iopub.status.idle": "2024-01-10T22:00:05.078856Z",
+     "shell.execute_reply": "2024-01-10T22:00:05.078400Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -163,15 +170,15 @@
        "79.05190677966102"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "## Test-then-train loop\n",
-    "from ensembles import OnlineBagging\n",
-    "from evaluation import ClassificationEvaluator\n",
+    "from capymoa.learner.classifier import OnlineBagging\n",
+    "from capymoa.evaluation import ClassificationEvaluator\n",
     "\n",
     "## Opening a file as a stream\n",
     "elec_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"electricity.csv\")\n",
@@ -193,6 +200,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c1360ef-0583-4c87-8645-1e2d701fffca",
    "metadata": {},
@@ -203,9 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f6fb628f-aefc-4bf1-8322-a175a16170e4",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:00:05.080800Z",
+     "iopub.status.busy": "2024-01-10T22:00:05.080669Z",
+     "iopub.status.idle": "2024-01-10T22:00:05.082987Z",
+     "shell.execute_reply": "2024-01-10T22:00:05.082529Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# shows the creation string, the __class__ is needed as a parameter to the function is the class used. \n",
@@ -214,23 +229,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "ae9bb646-e0d1-4de6-b5a1-cff0f0a1b172",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:00:05.084863Z",
+     "iopub.status.busy": "2024-01-10T22:00:05.084628Z",
+     "iopub.status.idle": "2024-01-10T22:00:06.405719Z",
+     "shell.execute_reply": "2024-01-10T22:00:06.405244Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "79.69632768361582"
+       "79.69412076271186"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from stream import Stream\n",
+    "from capymoa.stream import Stream\n",
     "from moa.streams.filters import StandardisationFilter, NormalisationFilter\n",
     "from moa.streams import FilteredStream\n",
     "\n",
@@ -282,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
