--- a/notebooks/SSL_example.ipynb
+++ b/notebooks/SSL_example.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "354c9535-8ed8-4494-b6b1-80ec0c74ba9a",
    "metadata": {},
@@ -15,56 +16,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "be53af05-72a8-4311-b07f-26f70d681e3e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the JVM and add the MOA jar to the classpath\n",
-    "from prepare_jpype import start_jpype\n",
-    "start_jpype()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "69abe6d9-5804-40f7-938c-75d87cf15866",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:04:58.147790Z",
+     "iopub.status.busy": "2024-01-10T22:04:58.147658Z",
+     "iopub.status.idle": "2024-01-10T22:04:59.106256Z",
+     "shell.execute_reply": "2024-01-10T22:04:59.105740Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
+      "MOA jar path location (config.ini): jar/moa.jar\n",
+      "JVM Location (system): \n",
+      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
+      "Sucessfully started the JVM and added MOA jar to the class path\n"
+     ]
+    }
+   ],
    "source": [
     "# imports from the library. \n",
-    "from stream import stream_from_file\n",
-    "from learners import MOAClassifierSSL\n",
-    "from visualization import plot_windowed_results\n",
-    "from evaluation import prequential_SSL_evaluation"
+    "from capymoa.stream import stream_from_file\n",
+    "from capymoa.learner import MOAClassifierSSL\n",
+    "from capymoa.evaluation.visualization import plot_windowed_results\n",
+    "from capymoa.evaluation import prequential_SSL_evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "955caba3-70c5-479f-8596-5663a30f47e4",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:04:59.108237Z",
+     "iopub.status.busy": "2024-01-10T22:04:59.108062Z",
+     "iopub.status.idle": "2024-01-10T22:04:59.114994Z",
+     "shell.execute_reply": "2024-01-10T22:04:59.114519Z"
+    }
+   },
    "outputs": [],
    "source": [
     "## Read the stream from a file. CSV files also work, but it is better to use ARFF files (especially if datasets are large). \n",
-    "rbf_arff_file_path = './data/RBFm_100k.arff'\n",
+    "rbf_arff_file_path = '../data/RBFm_100k.arff'\n",
     "stream = stream_from_file(path_to_csv_or_arff=rbf_arff_file_path, class_index=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "514ceb2e-87c2-4b27-ac9d-52435bbda524",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:04:59.116896Z",
+     "iopub.status.busy": "2024-01-10T22:04:59.116761Z",
+     "iopub.status.idle": "2024-01-10T22:05:13.974287Z",
+     "shell.execute_reply": "2024-01-10T22:05:13.973907Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'learner': 'ClusterAndLabelClassifier',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x14c57c350>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x14c5820d0>,\n",
-       " 'wallclock': 12.616607904434204,\n",
-       " 'cpu_time': 25.412976999999998,\n",
+       " 'cumulative': <capymoa.evaluation.evaluation.ClassificationEvaluator at 0x7f1e78397d30>,\n",
+       " 'windowed': <capymoa.evaluation.evaluation.ClassificationWindowedEvaluator at 0x7f1da175fbe0>,\n",
+       " 'wallclock': 14.59421682357788,\n",
+       " 'cpu_time': 21.832441999999997,\n",
        " 'other_measurements': {'num_unlabeled_instances': 99015.0,\n",
        "  'pseudo_label_accuracy': 0.28931,\n",
        "  'num_correct_pseudo_labeled': 28931.0,\n",
@@ -281,18 +304,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "9ec0b7d8-954b-474b-84eb-58e77edd5cf9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:05:13.976141Z",
+     "iopub.status.busy": "2024-01-10T22:05:13.975949Z",
+     "iopub.status.idle": "2024-01-10T22:05:18.923340Z",
+     "shell.execute_reply": "2024-01-10T22:05:18.922996Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'learner': 'ClusterAndLabelClassifier',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12ea85990>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x14f109410>,\n",
-       " 'wallclock': 4.164032936096191,\n",
-       " 'cpu_time': 8.809932999999994,\n",
+       " 'cumulative': <capymoa.evaluation.evaluation.ClassificationEvaluator at 0x7f1e7831cfd0>,\n",
+       " 'windowed': <capymoa.evaluation.evaluation.ClassificationWindowedEvaluator at 0x7f1da14161c0>,\n",
+       " 'wallclock': 4.93620228767395,\n",
+       " 'cpu_time': 7.980176,\n",
        " 'other_measurements': {'num_unlabeled_instances': 99015.0,\n",
        "  'pseudo_label_accuracy': 0.25152,\n",
        "  'num_correct_pseudo_labeled': 25152.0,\n",
@@ -492,9 +522,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "29426ed6-d05e-4000-9606-10a47dd24780",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:05:18.925081Z",
+     "iopub.status.busy": "2024-01-10T22:05:18.924949Z",
+     "iopub.status.idle": "2024-01-10T22:05:18.927571Z",
+     "shell.execute_reply": "2024-01-10T22:05:18.927221Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -518,6 +555,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ad6a0a10-ab56-49b7-8e68-ae8eec941ebb",
    "metadata": {},
@@ -530,18 +568,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "89656078-4044-4863-9fb7-76f23e709033",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:05:18.929487Z",
+     "iopub.status.busy": "2024-01-10T22:05:18.929355Z",
+     "iopub.status.idle": "2024-01-10T22:05:20.850373Z",
+     "shell.execute_reply": "2024-01-10T22:05:20.849789Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'learner': 'StreamingRandomPatches',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x14c5ed990>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x14c5ed290>,\n",
-       " 'wallclock': 3.4363582134246826,\n",
-       " 'cpu_time': 5.221159999999998,\n",
+       " 'cumulative': <capymoa.evaluation.evaluation.ClassificationEvaluator at 0x7f1da12b4760>,\n",
+       " 'windowed': <capymoa.evaluation.evaluation.ClassificationWindowedEvaluator at 0x7f1da12b4700>,\n",
+       " 'wallclock': 1.8976526260375977,\n",
+       " 'cpu_time': 4.652158,\n",
        " 'other_measurements': {'num_unlabeled_instances': 99015.0,\n",
        "  'pseudo_label_accuracy': 0.0,\n",
        "  'num_correct_pseudo_labeled': 0.0,\n",
@@ -729,7 +774,7 @@
    ],
    "source": [
     "from moa.classifiers.meta import StreamingRandomPatches\n",
-    "from learners import MOAClassifier\n",
+    "from capymoa.learner import MOAClassifier\n",
     "\n",
     "srp10 = MOAClassifier(moa_learner=StreamingRandomPatches(), CLI=\"-s 10\")\n",
     "\n",
@@ -742,9 +787,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "4003f5b7-6193-4f93-ac5c-4e2db840a6f6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:05:20.853362Z",
+     "iopub.status.busy": "2024-01-10T22:05:20.853025Z",
+     "iopub.status.idle": "2024-01-10T22:05:21.153118Z",
+     "shell.execute_reply": "2024-01-10T22:05:21.152320Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -792,7 +844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
