--- a/notebooks/Simple_NeuralNetwork.ipynb
+++ b/notebooks/Simple_NeuralNetwork.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b773bf8e-c420-44e1-80a6-99f75dd12268",
    "metadata": {},
@@ -14,35 +15,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b02aaf7b-11b5-4512-8a3b-5c26d8235b3a",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-03T08:38:53.192087Z",
-     "start_time": "2023-12-03T08:38:51.692824Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MOA jar path location (config.ini): ./jar/moa.jar\n",
-      "JVM Location (system): \n",
-      "\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n"
-     ]
-    }
-   ],
-   "source": [
-    "from prepare_jpype import start_jpype\n",
-    "\n",
-    "start_jpype()"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "96cb3df1-190c-49ea-959b-292559df13e6",
    "metadata": {},
@@ -52,12 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3b7be7ed-97d2-437a-9ed9-fb71e4f33328",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-03T08:38:59.769504Z",
      "start_time": "2023-12-03T08:38:57.307505Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:00:08.658295Z",
+     "iopub.status.busy": "2024-01-10T22:00:08.658024Z",
+     "iopub.status.idle": "2024-01-10T22:00:10.171851Z",
+     "shell.execute_reply": "2024-01-10T22:00:10.171311Z"
     }
    },
    "outputs": [
@@ -65,6 +44,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
+      "MOA jar path location (config.ini): jar/moa.jar\n",
+      "JVM Location (system): \n",
+      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
+      "Sucessfully started the JVM and added MOA jar to the class path\n",
       "x: [0.       0.056443 0.439155 0.003467 0.422915 0.414912], y: 1.0\n",
       "x: [0.021277 0.051699 0.415055 0.003467 0.422915 0.414912], y: 1.0\n",
       "x: [0.042553 0.051489 0.385004 0.003467 0.422915 0.414912], y: 1.0\n",
@@ -89,9 +74,9 @@
     }
    ],
    "source": [
-    "from stream import stream_from_file\n",
+    "from capymoa.stream import stream_from_file\n",
     "\n",
-    "DATA_PATH = \"./data/\"\n",
+    "DATA_PATH = \"../data/\"\n",
     "\n",
     "## Opening a file as a stream\n",
     "elec_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"electricity.csv\")\n",
@@ -107,12 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "38d831be-3560-4efd-89bd-1ec71f001833",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-03T08:39:01.484815Z",
      "start_time": "2023-12-03T08:39:01.477002Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:00:10.173860Z",
+     "iopub.status.busy": "2024-01-10T22:00:10.173651Z",
+     "iopub.status.idle": "2024-01-10T22:00:10.178665Z",
+     "shell.execute_reply": "2024-01-10T22:00:10.178033Z"
     }
    },
    "outputs": [
@@ -149,6 +140,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3e2ee6cd888826d",
    "metadata": {
@@ -164,7 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "id": "28c87878ee6de83f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T08:39:14.442525Z",
+     "start_time": "2023-12-03T08:39:11.361827Z"
+    },
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:00:10.180636Z",
+     "iopub.status.busy": "2024-01-10T22:00:10.180456Z",
+     "iopub.status.idle": "2024-01-10T22:00:11.226883Z",
+     "shell.execute_reply": "2024-01-10T22:00:11.226290Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -204,25 +210,23 @@
     "model = None\n",
     "optimizer = None\n",
     "loss_fn = nn.CrossEntropyLoss()\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-03T08:39:14.442525Z",
-     "start_time": "2023-12-03T08:39:11.361827Z"
-    }
-   },
-   "id": "28c87878ee6de83f"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "10aa0ccfb7839e99",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-03T08:40:17.878908Z",
      "start_time": "2023-12-03T08:39:23.127928Z"
+    },
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:00:11.229130Z",
+     "iopub.status.busy": "2024-01-10T22:00:11.228868Z",
+     "iopub.status.idle": "2024-01-10T22:04:19.880471Z",
+     "shell.execute_reply": "2024-01-10T22:04:19.880073Z"
     }
    },
    "outputs": [
@@ -239,58 +243,72 @@
       "    (3): ReLU()\n",
       "    (4): Linear(in_features=512, out_features=2, bias=True)\n",
       "  )\n",
-      ")\n",
-      "Accuracy at 1000 : 59.599999999999994\n",
-      "Accuracy at 2000 : 63.7\n",
-      "Accuracy at 3000 : 63.16666666666667\n",
-      "Accuracy at 4000 : 64.0\n",
-      "Accuracy at 5000 : 64.62\n",
-      "Accuracy at 6000 : 64.51666666666667\n",
-      "Accuracy at 7000 : 64.28571428571429\n",
-      "Accuracy at 8000 : 64.4\n",
-      "Accuracy at 9000 : 64.94444444444444\n",
-      "Accuracy at 10000 : 65.39\n",
-      "Accuracy at 11000 : 65.54545454545455\n",
-      "Accuracy at 12000 : 65.76666666666667\n",
-      "Accuracy at 13000 : 66.10769230769232\n",
-      "Accuracy at 14000 : 66.7642857142857\n",
-      "Accuracy at 15000 : 67.26666666666667\n",
-      "Accuracy at 16000 : 67.43124999999999\n",
-      "Accuracy at 17000 : 67.73529411764706\n",
-      "Accuracy at 18000 : 68.22222222222221\n",
-      "Accuracy at 19000 : 68.75263157894736\n",
-      "Accuracy at 20000 : 69.235\n",
-      "Accuracy at 21000 : 69.32857142857142\n",
-      "Accuracy at 22000 : 69.73636363636363\n",
-      "Accuracy at 23000 : 69.86956521739131\n",
-      "Accuracy at 24000 : 70.1125\n",
-      "Accuracy at 25000 : 70.292\n",
-      "Accuracy at 26000 : 70.43846153846154\n",
-      "Accuracy at 27000 : 70.74814814814815\n",
-      "Accuracy at 28000 : 70.87857142857142\n",
-      "Accuracy at 29000 : 70.95172413793104\n",
-      "Accuracy at 30000 : 71.02000000000001\n",
-      "Accuracy at 31000 : 71.14838709677419\n",
-      "Accuracy at 32000 : 70.79375\n",
-      "Accuracy at 33000 : 70.80606060606061\n",
-      "Accuracy at 34000 : 70.78235294117647\n",
-      "Accuracy at 35000 : 70.70571428571428\n",
-      "Accuracy at 36000 : 70.83611111111111\n",
-      "Accuracy at 37000 : 70.85405405405405\n",
-      "Accuracy at 38000 : 71.07368421052631\n",
-      "Accuracy at 39000 : 71.2897435897436\n",
-      "Accuracy at 40000 : 71.49\n",
-      "Accuracy at 41000 : 71.58292682926829\n",
-      "Accuracy at 42000 : 71.73809523809524\n",
-      "Accuracy at 43000 : 71.90232558139536\n",
-      "Accuracy at 44000 : 71.92045454545455\n",
-      "Accuracy at 45000 : 72.00222222222223\n",
-      "Accuracy at 45312 : 72.01844985875707\n"
+      ")\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_76258/3342350797.py:21: DeprecationWarning: an integer is required (got type float).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
+      "  y = torch.tensor(instance.y(), dtype=torch.long)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy at 1000 : 58.5\n",
+      "Accuracy at 2000 : 63.24999999999999\n",
+      "Accuracy at 3000 : 62.9\n",
+      "Accuracy at 4000 : 63.74999999999999\n",
+      "Accuracy at 5000 : 64.3\n",
+      "Accuracy at 6000 : 64.28333333333333\n",
+      "Accuracy at 7000 : 64.1\n",
+      "Accuracy at 8000 : 64.17500000000001\n",
+      "Accuracy at 9000 : 64.67777777777778\n",
+      "Accuracy at 10000 : 65.09\n",
+      "Accuracy at 11000 : 65.26363636363637\n",
+      "Accuracy at 12000 : 65.58333333333334\n",
+      "Accuracy at 13000 : 65.93846153846154\n",
+      "Accuracy at 14000 : 66.64285714285715\n",
+      "Accuracy at 15000 : 67.16666666666666\n",
+      "Accuracy at 16000 : 67.325\n",
+      "Accuracy at 17000 : 67.65882352941176\n",
+      "Accuracy at 18000 : 68.12222222222222\n",
+      "Accuracy at 19000 : 68.71052631578948\n",
+      "Accuracy at 20000 : 69.155\n",
+      "Accuracy at 21000 : 69.18095238095238\n",
+      "Accuracy at 22000 : 69.58181818181818\n",
+      "Accuracy at 23000 : 69.74782608695652\n",
+      "Accuracy at 24000 : 70.0\n",
+      "Accuracy at 25000 : 70.172\n",
+      "Accuracy at 26000 : 70.33076923076923\n",
+      "Accuracy at 27000 : 70.63333333333334\n",
+      "Accuracy at 28000 : 70.76071428571429\n",
+      "Accuracy at 29000 : 70.78965517241379\n",
+      "Accuracy at 30000 : 70.86666666666666\n",
+      "Accuracy at 31000 : 71.00645161290322\n",
+      "Accuracy at 32000 : 70.671875\n",
+      "Accuracy at 33000 : 70.69090909090909\n",
+      "Accuracy at 34000 : 70.66764705882352\n",
+      "Accuracy at 35000 : 70.61428571428571\n",
+      "Accuracy at 36000 : 70.73888888888888\n",
+      "Accuracy at 37000 : 70.74324324324324\n",
+      "Accuracy at 38000 : 70.96578947368421\n",
+      "Accuracy at 39000 : 71.2051282051282\n",
+      "Accuracy at 40000 : 71.4125\n",
+      "Accuracy at 41000 : 71.52439024390243\n",
+      "Accuracy at 42000 : 71.68571428571428\n",
+      "Accuracy at 43000 : 71.85348837209303\n",
+      "Accuracy at 44000 : 71.88181818181818\n",
+      "Accuracy at 45000 : 71.95777777777778\n",
+      "Accuracy at 45312 : 71.9875529661017\n"
      ]
     }
    ],
    "source": [
-    "from evaluation import ClassificationEvaluator\n",
+    "from capymoa.evaluation import ClassificationEvaluator\n",
     "\n",
     "# Creating the evaluator\n",
     "evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
@@ -338,86 +356,120 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "source": [
-    "## 2. How to use TensorBoard with PyTorch"
-   ],
+   "id": "6f7cccf5dfb93550",
    "metadata": {
     "collapsed": false
    },
-   "id": "6f7cccf5dfb93550"
+   "source": [
+    "## 2. How to use TensorBoard with PyTorch"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "43078242df35b155",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "Install TensorBoard through the command line to visualize data you logged\n",
     "\n",
     "```sh\n",
     "pip install tensorboard\n",
     "```"
-   ],
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8ac091a2fe4cf209",
    "metadata": {
     "collapsed": false
    },
-   "id": "43078242df35b155"
-  },
-  {
-   "cell_type": "markdown",
    "source": [
     "Clear any logs from previous runs\n",
     "\n",
     "```sh\n",
     "rm -rf ./runs\n",
     "```"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "8ac091a2fe4cf209"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "source": [
-    "Create a SummaryWriter instance."
-   ],
+   "id": "db2288d0cae3250e",
    "metadata": {
     "collapsed": false
    },
-   "id": "db2288d0cae3250e"
+   "source": [
+    "Create a SummaryWriter instance."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
+   "id": "8ec688a5b4af052f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T08:46:58.941683Z",
+     "start_time": "2023-12-03T08:46:58.796558Z"
+    },
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:04:19.882713Z",
+     "iopub.status.busy": "2024-01-10T22:04:19.882567Z",
+     "iopub.status.idle": "2024-01-10T22:04:19.941477Z",
+     "shell.execute_reply": "2024-01-10T22:04:19.939558Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from torch.utils.tensorboard import SummaryWriter\n",
     "writer = SummaryWriter()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-03T08:46:58.941683Z",
-     "start_time": "2023-12-03T08:46:58.796558Z"
-    }
-   },
-   "id": "8ec688a5b4af052f"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "source": [
-    "Writer will output to ./runs/ directory by default."
-   ],
+   "id": "3bf9fc5f5d481206",
    "metadata": {
     "collapsed": false
    },
-   "id": "3bf9fc5f5d481206"
+   "source": [
+    "Writer will output to ./runs/ directory by default."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
+   "execution_count": 6,
+   "id": "b5d0d6dd10dacc37",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T08:48:08.339851Z",
+     "start_time": "2023-12-03T08:47:18.177021Z"
+    },
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:04:19.948753Z",
+     "iopub.status.busy": "2024-01-10T22:04:19.948032Z",
+     "iopub.status.idle": "2024-01-10T22:04:55.688638Z",
+     "shell.execute_reply": "2024-01-10T22:04:55.688175Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_76258/552737021.py:21: DeprecationWarning: an integer is required (got type float).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
+      "  y = torch.tensor(instance.y(), dtype=torch.long)\n"
+     ]
+    }
+   ],
    "source": [
-    "from evaluation import ClassificationEvaluator\n",
+    "from capymoa.evaluation import ClassificationEvaluator\n",
     "\n",
     "# Creating the evaluator\n",
     "evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
@@ -463,47 +515,51 @@
     "    \n",
     "writer.add_scalar(\"accuracy\", evaluator.accuracy(), i)\n",
     "writer.flush()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-03T08:48:08.339851Z",
-     "start_time": "2023-12-03T08:47:18.177021Z"
-    }
-   },
-   "id": "b5d0d6dd10dacc37"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "4b0ff08045e19911",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "Call flush() method to make sure that all pending events have been written to disk.\n",
     "\n",
     "See torch.utils.tensorboard tutorials to find more TensorBoard visualization types you can log.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "4b0ff08045e19911"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
+   "id": "b228ae7468b3e4f1",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T08:49:14.066571Z",
+     "start_time": "2023-12-03T08:49:14.058709Z"
+    },
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:04:55.690636Z",
+     "iopub.status.busy": "2024-01-10T22:04:55.690484Z",
+     "iopub.status.idle": "2024-01-10T22:04:55.695982Z",
+     "shell.execute_reply": "2024-01-10T22:04:55.695577Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# If you do not need the summary writer anymore, call close() method.\n",
     "writer.close()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-03T08:49:14.066571Z",
-     "start_time": "2023-12-03T08:49:14.058709Z"
-    }
-   },
-   "id": "b228ae7468b3e4f1"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "41e42734ee9ce0f1",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "\n",
     "```\n",
@@ -524,11 +580,7 @@
     "This dashboard shows how the accuracy change with time. \n",
     "You can use it to also track training speed, learning rate, and other \n",
     "scalar values."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "41e42734ee9ce0f1"
+   ]
   }
  ],
  "metadata": {
@@ -547,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
