--- a/notebooks/Using_jpype_MOA_example.ipynb
+++ b/notebooks/Using_jpype_MOA_example.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "69c6e33e-88ee-4366-8830-9305c2dc182c",
    "metadata": {},
@@ -17,30 +18,29 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "1e7fe1d7-21c6-40f7-b829-212a98889c83",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:05:23.603435Z",
+     "iopub.status.busy": "2024-01-10T22:05:23.602760Z",
+     "iopub.status.idle": "2024-01-10T22:05:23.611252Z",
+     "shell.execute_reply": "2024-01-10T22:05:23.610820Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n"
+      "JAVA_HOME:  /usr/lib/jvm/java-17-openjdk\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use this to check if java_home is correctly set\n",
     "import subprocess\n",
-    "subprocess.call(\"ECHO $JAVA_HOME\", shell=True)\n",
+    "import os\n",
+    "\n",
+    "print(\"JAVA_HOME: \", os.environ['JAVA_HOME'])\n",
     "# If JAVA_HOME is not set, then jpype will fail. "
    ]
   },
@@ -48,7 +48,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "712b607a-a9ef-4441-a212-6f86e0af75c5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:05:23.613403Z",
+     "iopub.status.busy": "2024-01-10T22:05:23.613264Z",
+     "iopub.status.idle": "2024-01-10T22:05:23.775530Z",
+     "shell.execute_reply": "2024-01-10T22:05:23.775086Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import jpype\n",
@@ -70,15 +77,23 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "61592628-0cd0-4b43-9e37-4fac3fb8ad03",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:05:23.777773Z",
+     "iopub.status.busy": "2024-01-10T22:05:23.777615Z",
+     "iopub.status.idle": "2024-01-10T22:05:23.792544Z",
+     "shell.execute_reply": "2024-01-10T22:05:23.791981Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "# Add the moa jar to the class path\n",
-    "jpype.addClassPath(os.getcwd()+'/jar/moa.jar')"
+    "jpype.addClassPath(os.getcwd()+'/../src/capymoa/jar/moa.jar')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b63e8020-e503-4476-87ba-0bbb81815037",
    "metadata": {},
@@ -91,6 +106,12 @@
    "execution_count": 4,
    "id": "def73fba-7f72-4168-b621-1fc4b7c12a66",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-10T22:05:23.794636Z",
+     "iopub.status.busy": "2024-01-10T22:05:23.794488Z",
+     "iopub.status.idle": "2024-01-10T22:05:24.934370Z",
+     "shell.execute_reply": "2024-01-10T22:05:24.933803Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -98,8 +119,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.11 s, sys: 1.03 s, total: 4.14 s\n",
-      "Wall time: 1.62 s\n"
+      "CPU times: user 3.62 s, sys: 565 ms, total: 4.19 s\n",
+      "Wall time: 1.12 s\n"
      ]
     },
     {
@@ -383,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
